# Super_Terminal

./: .env.example  .gitignore  PRD.md  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
tests/: conftest.py  test_capabilities.py  test_classifier.py  test_completion.py  test_config.py  test_execution.py  test_history.py  test_main_prompt.py  test_monitoring.py  test_overlay_audio.py  test_personality.py  test_system_log.py  test_transcriber.py  test_translator.py  test_voice.py
utils/: __init__.py  capabilities.py  classifier.py  completion.py  config.py  detector.py  executor.py  history.py  injector.py  monitoring.py  overlay.py  personality.py  system_log.py  transcriber.py  translator.py  voice.py
