[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "superterminal-cli"
version = "0.1.0"
description = "Natural-language terminal command translator with editable safety prompts."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-genai>=1.0.0,<2.0.0",
    "prompt-toolkit>=3.0.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sounddevice>=0.4.6,<0.6.0",
]

[project.optional-dependencies]
# Kept for backward compatibility: sounddevice is now a standard dependency.
voice = [
    "sounddevice>=0.4.6,<0.6.0",
]
dev = [
    "pytest>=8.0.0,<9.0.0",
]

[project.scripts]
superterminal = "main:main"
super = "main:main"
supervoice = "main:main_voice"

[tool.setuptools]
py-modules = ["main"]
packages = ["utils"]
